happyface and sadface

--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages Herro.</p>
+<img src="happyface.png" alt="no_image_for_you">
+<img src="sadface.jpg" alt="no_image_for_you">
 </body>
 </html>
